fix: Skin: Button alignment on quicklaunch page
(integrated from master branch change 0a29d23 by Nathan Rijksen <nathanr@activestate.com>)

--- a/src/chrome/komodo/skin/plat/shared/modules.less
+++ b/src/chrome/komodo/skin/plat/shared/modules.less
@@ -328,6 +328,7 @@ toolbar#nav-bar
     {
         width: 250px;
         padding: 6px 4px;
+        margin: 2px 0 1px;
 
         image.button-icon
         {
